--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+const blogPageTitle = "My Blog Page";
 ---
 
 <html lang="en">
@@ -8,7 +9,7 @@ import "../styles/global.css";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{blogPageTitle}</title>
   </head>
   <body>
     <nav>
@@ -17,6 +18,10 @@ import "../styles/global.css";
       <a href="/blog">Blog</a>
     </nav>
 
-    <h1>My Astro Site</h1>
+    <h1>{blogPageTitle}</h1>
+
+    <li><a href="/posts/post-1/">Post 1</a></li>
+    <li><a href="/posts/post-2/">Post 2</a></li>
+    <li><a href="/posts/post-3/">Post 3</a></li>
   </body>
 </html>
