starting with components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 ---
 
@@ -11,12 +12,13 @@ import "../styles/global.css";
     <title>Astro</title>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/blog">Blog</a>
-    </nav>
+    <Navigation />
 
     <h1>My Astro Site</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis neque in
+      deleniti quam adipisci quos harum dolor ut ad obcaecati? Aut corporis
+      fugit earum eius animi impedit officiis ipsa hic!
+    </p>
   </body>
 </html>
