--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 const aboutPageTitle = "About Me";
 
@@ -41,11 +42,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/blog">Blog</a>
-    </nav>
+    <Navigation />
 
     <h1>{aboutPageTitle}</h1>
     <h2>... and my new Astro site!</h2>
