--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from "../components/Navigation.astro";
 import "../styles/global.css";
 const blogPageTitle = "My Blog Page";
 ---
@@ -12,11 +13,7 @@ const blogPageTitle = "My Blog Page";
     <title>{blogPageTitle}</title>
   </head>
   <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/about">About</a>
-      <a href="/blog">Blog</a>
-    </nav>
+    <Navigation />
 
     <h1>{blogPageTitle}</h1>
 
