continue with the use of components and styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 ---
 
@@ -12,7 +13,7 @@ import "../styles/global.css";
     <title>Astro</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>My Astro Site</h1>
     <p>
@@ -20,5 +21,7 @@ import "../styles/global.css";
       deleniti quam adipisci quos harum dolor ut ad obcaecati? Aut corporis
       fugit earum eius animi impedit officiis ipsa hic!
     </p>
+
+    <Footer />
   </body>
 </html>
