--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 const aboutPageTitle = "About Me";
 
@@ -42,7 +43,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{aboutPageTitle}</h1>
     <h2>... and my new Astro site!</h2>
@@ -86,5 +87,6 @@ const textCase = "uppercase";
         <p>My goal is not 3 days</p>
       )
     }
+    <Footer />
   </body>
 </html>
