--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from "../components/Navigation.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 const blogPageTitle = "My Blog Page";
 ---
@@ -13,12 +14,14 @@ const blogPageTitle = "My Blog Page";
     <title>{blogPageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
 
     <h1>{blogPageTitle}</h1>
 
     <li><a href="/posts/post-1/">Post 1</a></li>
     <li><a href="/posts/post-2/">Post 2</a></li>
     <li><a href="/posts/post-3/">Post 3</a></li>
+
+    <Footer />
   </body>
 </html>
