adding further components and using first script in astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,5 +23,8 @@ import "../styles/global.css";
     </p>
 
     <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
