--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,30 +1,8 @@
 ---
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
-import "../styles/global.css";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Homepage";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <Header />
-
-    <h1>My Astro Site</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis neque in
-      deleniti quam adipisci quos harum dolor ut ad obcaecati? Aut corporis
-      fugit earum eius animi impedit officiis ipsa hic!
-    </p>
-
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
