--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,4 +5,8 @@ const pageTitle = "My Blog Page";
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
+
+  <li><a href="/posts/post-1/">Post 1</a></li>
+  <li><a href="/posts/post-2/">Post 2</a></li>
+  <li><a href="/posts/post-3/">Post 3</a></li>
 </BaseLayout>
