--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,17 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
+const allPosts = Object.values(
+  import.meta.glob("./posts/*.md", { eager: true })
+);
 const pageTitle = "My Blog Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h2>My awesome blog subtitle</h2>
-
-  <li><a href="/posts/post-1/">Post 1</a></li>
-  <li><a href="/posts/post-2/">Post 2</a></li>
-  <li><a href="/posts/post-3/">Post 3</a></li>
+  {
+    allPosts.map((post: any) => (
+      <BlogPost url={post.url} title={post.frontmatter.title} />
+    ))
+  }
 </BaseLayout>
